--- a/index.org
+++ b/index.org
@@ -25,7 +25,7 @@
 #+HTML_HEAD: <style>pre.example { white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -o-pre-wrap; font-family: Lucida Console, monospace; font-size: 80%; background: #404040; color: white; display: block; padding: 0em; border: 2px solid black; }</style>
 #+HTML_HEAD: <style>blockquote { margin-bottom: 0.5em; padding: 0.5em; background-color: #FFF8DC; border-left: 2px solid #A5573E; border-left-color: rgb(255, 228, 102); display: block; margin-block-start: 1em; margin-block-end: 1em; margin-inline-start: 5em; margin-inline-end: 5em; } </style>
 #+HTML_LINK_HOME: https://www.mitchr.me/
-#+HTML_LINK_UP: https://www.mitchr.me/FIXME
+#+HTML_LINK_UP: https://github.com/richmit/TestEquipmentNotes
 # ######################################################################################################################################################.H.E.##
 
 #+ATTR_HTML: :border 2 solid #ccc :frame hsides :align center
@@ -3807,9 +3807,9 @@ sudo chmod a+r /etc/udev/rules.d/98-buspirate36.rules
 
 * Document Meta Data
 
- - The master location for org-mode source code for this document: 
- - The master location for the HTML rendered from org-mode source for this document: 
- - Repository with all code and data for this document:
+ - The master location for org-mode source code for this document: https://github.com/richmit/TestEquipmentNotes/blob/main/index.org
+ - The master location for the HTML rendered from org-mode source for this document: https://richmit.github.io/TestEquipmentNotes/
+ - Repository with all code and data for this document: https://github.com/richmit/TestEquipmentNotes
 
 * Detailed TOC
 :PROPERTIES:
